[Duplicate Objects] 2.90.0 Duplicating parented objects have a bug #78330

Closed
opened 2020-06-26 23:54:37 +02:00 by Oleksandr Kahal · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: 62aa103d48
Introduced in ad6cccf058

Short description of error
Duplicating parenting objects worked in wrong way. If we make parent objects one to each other in simple hierarchy and duplicate they it broke hierarchy in a crazy way. Same thing happen if we have objects with mirror modifier which use "mirror object" as axis and those objects parented to another object or Empty.
Watch the video below, please!

Version 2.83.1 doesn't have any of these issues

Exact steps for others to reproduce the error

  • make some cubes, maybe 4-5

  • parent them to each other

  • try select them all and duplicate

  • also you may make some objects with mirror modifier which use "mirror object" as axis

  • parent them to another object

  • select them all and duplicate

Duplicate_BUG.blend
Duplicate_Parent_BUG.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: `62aa103d48` Introduced in ad6cccf058 **Short description of error** Duplicating parenting objects worked in wrong way. If we make parent objects one to each other in simple hierarchy and duplicate they it broke hierarchy in a crazy way. Same thing happen if we have objects with mirror modifier which use "mirror object" as axis and those objects parented to another object or Empty. Watch the video below, please! Version 2.83.1 doesn't have any of these issues **Exact steps for others to reproduce the error** - make some cubes, maybe 4-5 - parent them to each other - try select them all and duplicate - also you may make some objects with mirror modifier which use "mirror object" as axis - parent them to another object - select them all and duplicate [Duplicate_BUG.blend](https://archive.blender.org/developer/F8645964/Duplicate_BUG.blend) [Duplicate_Parent_BUG.mp4](https://archive.blender.org/developer/F8645965/Duplicate_Parent_BUG.mp4)

Added subscriber: @ignietferro-1

Added subscriber: @ignietferro-1

#78510 was marked as duplicate of this issue

#78510 was marked as duplicate of this issue

#78490 was marked as duplicate of this issue

#78490 was marked as duplicate of this issue

Added subscriber: @VincentBlankfield

Added subscriber: @VincentBlankfield

Introduced in ad6cccf058.

Related task #77959 - no it isn't (sory about the misleading info).

Introduced in ad6cccf058. ~~Related task #77959~~ - no it isn't (sory about the misleading info).

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

In #78330#967718, @VincentBlankfield wrote:
Introduced in ad6cccf058. Related task #77959.

#77959 has nothing to do with this bug report... It's bout linked data (i.e. linked from other libraries).

> In #78330#967718, @VincentBlankfield wrote: > Introduced in ad6cccf058. Related task #77959. #77959 has nothing to do with this bug report... It's bout linked data (i.e. linked from other libraries).
Bastien Montagne self-assigned this 2020-07-01 16:33:10 +02:00

This issue was referenced by f4f00661a5

This issue was referenced by f4f00661a51a7fab89c1ade40d6195522d6e2f63

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @ChrisGraz

Added subscriber: @ChrisGraz

Added subscribers: @LaStefan, @iss

Added subscribers: @LaStefan, @iss
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78330
No description provided.