Fix T78330: Duplicating parented objects does not preserve relationships.

Caused by refactor of duplicate code in rBad6cccf058d0, we need to take
into account the duplication of groups of objects here too...